Jobs Tracking Application/force-app/main/default/objects/Opportunity/Opportunity.object-meta.xml
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>