Jobs Tracking Application/force-app/main/default/objects/Opportunity/fields/Bonus_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Percentage__c</fullName>
    <label>Bonus Percentage</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>