Jobs Tracking Application/force-app/main/default/objects/Opportunity/fields/Certifications_Required__c.field-meta.xml
<CustomField>
    <fullName>Certifications_Required__c</fullName>
    <label>Certifications Required</label>
    <type>TextArea</type>
</CustomField>