Jobs Tracking Application/force-app/main/default/objects/Opportunity/fields/Consulting_Project_Notes__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Project_Notes__c</fullName>
    <label>Consulting Project Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>