Jobs Tracking Application/force-app/main/default/objects/Opportunity/fields/Contract_Term_in_Months__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term_in_Months__c</fullName>
    <label>Contract Term in Months</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>