Jobs Tracking Application/force-app/main/default/objects/Opportunity/fields/Degree_Required__c.field-meta.xml
<CustomField>
    <fullName>Degree_Required__c</fullName>
    <label>Degree Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Preferred</fullName>
            </value>
            <value>
                <fullName>Equivalent Experience</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>