Jobs Tracking Application/force-app/main/default/objects/Opportunity/fields/Full_Time__c.field-meta.xml
<CustomField>
    <fullName>Full_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Full-Time</label>
    <type>Checkbox</type>
</CustomField>