Jobs Tracking Application/force-app/main/default/objects/Opportunity/fields/Insurance__c.field-meta.xml
<CustomField>
    <fullName>Insurance__c</fullName>
    <label>Insurance</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Vision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>