Jobs Tracking Application/force-app/main/default/objects/Opportunity/fields/PTO__c.field-meta.xml
<CustomField>
    <fullName>PTO__c</fullName>
    <label>PTO</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>