Jobs Tracking Application/force-app/main/default/objects/Opportunity/fields/Recruiting_Company__c.field-meta.xml
<CustomField>
    <fullName>Recruiting_Company__c</fullName>
    <label>Recruiting Company</label>
    <type>TextArea</type>
</CustomField>