Jobs Tracking Application/force-app/main/default/objects/Opportunity/fields/Resume__c.field-meta.xml
<CustomField>
    <fullName>Resume__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Resume</label>
    <referenceTo>Resume__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>