Jobs Tracking Application/force-app/main/default/objects/Opportunity/fields/Salary_Minimum__c.field-meta.xml
<CustomField>
    <fullName>Salary_Minimum__c</fullName>
    <label>Salary Minimum</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>