Jobs Tracking Application/force-app/main/default/objects/Opportunity/fields/Work_Location__c.field-meta.xml
<CustomField>
    <fullName>Work_Location__c</fullName>
    <label>Work Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>