Jobs Tracking Application/force-app/main/default/objects/Opportunity/fields/X401K_Percentage_Match__c.field-meta.xml
<CustomField>
    <fullName>X401K_Percentage_Match__c</fullName>
    <label>401K Percentage Match</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>