Jobs Tracking Application/force-app/main/default/objects/Opportunity/recordTypes/Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Record_Type</fullName>
    <active>true</active>
    <businessProcess>New Sales Process</businessProcess>
    <label>Record Type</label>
</RecordType>